app/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-predictor-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: image-predictor
